alhamdulillah cair
