# models/links.go
@@ -13,6 +13,9 @@ type Link struct {
 	ID         uint      `gorm:"primaryKey" json:"id"`
 	Title      string    `gorm:"not null" json:"title"`
 	URL        string    `gorm:"not null" json:"url"`
+	ImageURL   string    `json:"image_url"`
+	Price      int64     `json:"price"`
+	PriceStr   string    `json:"price_str"`
 	Order      int       `json:"order"`
 	IsActive   bool      `gorm:"default:true" json:"is_active"`
 	CategoryID uint      `json:"category_id"`
